# rpa-dolar-poc

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/rpa_dolar_poc/: __main__.py
src/rpa_dolar_poc/config/: logging_config.py  settings.py
